# jtag-analyzer

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: JtagAnalyzer.cpp  JtagAnalyzer.h  JtagAnalyzerResults.cpp  JtagAnalyzerResults.h  JtagAnalyzerSettings.cpp  JtagAnalyzerSettings.h  JtagSimulationDataGenerator.cpp  JtagSimulationDataGenerator.h  JtagTypes.cpp  JtagTypes.h
